fixed mobile issues (hamburger menu stuck open; google maps making cards too wide).

--- a/css/style.css
+++ b/css/style.css
@@ -537,6 +537,19 @@ a:hover {
   }
 }
 
-@media (max-width: 500px) {
-  
+@media (max-width: 440px) { 
+
+  .countdown {
+    gap: 5px;
+    padding: 10px 0 30px;
+  }
+
+  .time-container p {  
+    font-size: 0.7rem;
+  }
+  .time-box {   
+    font-size: 1.5rem;
+    width: 70px;
+  }
+
 }
